fix: auction styles on small devices

--- a/webapp/src/components/AuctionPage/AuctionPage.css
+++ b/webapp/src/components/AuctionPage/AuctionPage.css
@@ -43,6 +43,10 @@
 }
 
 @media (max-width: 768px) {
+  .AuctionPage .information-block:first-child {
+    margin-top: 30px;
+  }
+
   .AuctionPage .information-blocks {
     display: block;
     text-align: center;
@@ -50,15 +54,11 @@
 }
 
 @media (max-width: 992px) {
-  .AuctionPage .information-block:first-child {
-    margin-top: 30px;
-  }
-
   .AuctionPage .information-block {
     margin-top: 20px;
   }
 
   .AuctionPage .parcels-included {
-    margin-top: 10px;
+    margin-top: 15px;
   }
 }
